# LearnCMake

./: CMakeLists.txt  config  main.cpp
